[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Ginasio-02/Ginasio02_fase02.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Ginasio-02/MinigameBola.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Ginasio-02/Ginasio02_fase02.png" type="Texture" id=3]
[ext_resource path="res://Sons/SoundX.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 20.3125, 36 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 20.3125, 36 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16.3333, 36.6667 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 56.3333, 15.6667 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MapaMedio" type="Sprite" parent="."]
position = Vector2( 746, 373 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="ChangeFase03" type="Area2D" parent="MapaMedio"]
position = Vector2( 497, 69 )
collision_layer = 256
collision_mask = 256

[node name="ChangeFase03" type="CollisionShape2D" parent="MapaMedio/ChangeFase03"]
position = Vector2( -5, -61 )
shape = SubResource( 11 )

[node name="Area2D2" type="Area2D" parent="MapaMedio"]
position = Vector2( -482, 60 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapaMedio/Area2D2"]
position = Vector2( 1, -57 )
shape = SubResource( 12 )

[node name="StaticBody2D" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( -497, -248 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapaMedio/StaticBody2D"]
position = Vector2( 0, -0.666667 )
polygon = PoolVector2Array( 0, 210, -0.315488, 291.21, 1.64245, 214.573, 205, 185, 207.667, 111.333, 383.667, 112, 384, 151, 343, 151, 343, 184, 376, 184, 377, 152, 419, 152, 419, 187, 541, 188, 540, 153, 578, 153, 575.667, 112, 719.667, 112, 718, 231, 1003, 216, 1003.13, 297.732, 999, -1, 0, 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( -497, -248 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapaMedio/StaticBody2D2"]
polygon = PoolVector2Array( 1, 290, 212, 322, 210, 405, 716, 404, 716, 281, 1001, 297, 1003, 488, -2, 489 )

[node name="StaticBody2D3" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( -497, -248 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapaMedio/StaticBody2D3"]
polygon = PoolVector2Array( 344, 306, 460, 305, 460, 344, 461, 350, 461, 384, 384, 384, 384, 353, 384, 344, 344, 344 )

[node name="StaticBody2D4" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( -497, -248 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapaMedio/StaticBody2D4"]
polygon = PoolVector2Array( 419, 226, 420, 270, 461, 270, 462, 231, 501, 231, 502, 269, 541, 269, 540, 225, 499, 226, 500, 189, 460, 189, 460, 225 )

[node name="StaticBody2D5" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( -497, -248 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapaMedio/StaticBody2D5"]
polygon = PoolVector2Array( 344, 232, 344, 264, 377, 264, 378, 232 )

[node name="Node2D3" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 63.6331, 0 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D4" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -96.9182, -79.8983 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D5" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -17.6215, 39.9491 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D6" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -16.6425, 0 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D7" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 63.6331, -40.7644 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D8" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 23.4953, -40.7644 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D9" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 62.6542, -79.8983 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D10" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 23.4953, 39.9491 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D11" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -15.6635, 79.083 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D12" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -56.7804, -40.7644 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D13" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -55.8014, 39.9491 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D14" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -97.8972, 39.9491 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D15" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -96.9182, 0 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D16" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( -96.9182, -40.7644 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="Node2D17" parent="MapaMedio" instance=ExtResource( 2 )]
position = Vector2( 62.6542, 39.9491 )
rotation = 3.14159
scale = Vector2( 0.510141, -0.425514 )

[node name="StaticBody2D7" type="StaticBody2D" parent="MapaMedio"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapaMedio/StaticBody2D7"]
position = Vector2( 105, -22 )
shape = SubResource( 14 )

[node name="StaticBody2D6" type="StaticBody2D" parent="MapaMedio"]
position = Vector2( 66.6667, -46.6667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapaMedio/StaticBody2D6"]
position = Vector2( -0.666626, 127.333 )
shape = SubResource( 13 )

[node name="SoundX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="MapaMedio/ChangeFase03" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="MapaMedio/ChangeFase03" to="." method="_on_ChangeFase03_body_entered"]
[connection signal="body_entered" from="MapaMedio/Area2D2" to="." method="_on_Area2D2_body_entered"]
